--- a/04/animations.html
+++ b/04/animations.html
@@ -12,8 +12,9 @@
       Покрасить в черный
     </button>
     <button onclick="makeCircle()">
-      Сделать круглый
+      Сделать круглым
     </button>
+    <input id="textInput" type="text" placeholder="Напишите любое слово">
     <button onclick="move()">
       Повинуть вправо и вниз на 100px
     </button>
@@ -23,7 +24,7 @@
     <button onclick="addText()">
       Добавить надпись
     </button>
-    <input type="text" placeholder="Напишите название цвета на английском или цвет кода"
+    <input id="colorInput" type="text" placeholder="Напишите название цвета на английском или цвет кода">
     <button onclick="changeColor">
       Поменять цвет на введенный
     </button>
